# ZTM_Python

./: .gitignore  README.md  pyproject.toml
AdvancedPython/Generator/: exercise.py  fibonnaci.py  generator.py  test.txt
AdvancedPython/OOP/: Inherintance.ipynb
Decorator/: decorator.py
ErrorHandling/: error_handling_exercise.py
Files/: IO.py  translate.txt  translate_ja.txt  translator.py
Functional/: comprehensions.py  functional.ipynb  lambda.ipynb
Functional/Exercise/: 4-ExerciseMap_filter_zip_reduce.py  5-ExerciseLambda.py  exercise.py
Modules/: UsefulModules.py  exercise.py  main.py  utility.py
OOP/: Inheritance_excercise.ipynb  Multi_Inheritance.ipynb  dunder.ipynb  oop.ipynb
OOP/exercises/: Inheritance_exercise2.ipynb
PythonBasics/: Basics.ipynb  Basics2.ipynb
PythonBasics/Excercise/: 1-ExerciseOperatorPrecedence.py  10-ExerciseCommonListPaterns.py  11-ExerciseDictionaryMethods.py  2-ExerciseAugmentedAssignmentOperator.py  3-ExerciseFormattedStrings.py  4-ExerciseStringIndexes.py  5-ExerciseTypeConversion.py  7-ExerciseListSlicing.py  8-ExerciseMatrix.py  9-ExerciseListMethods.py
RegEx/: RegEx.py  RegEx_cheat_sheet.md  RegEx_exercise.py
Scripting/ImageProcessing/: main.ipynb
Scripting/PasswordChecker/: passwordChecker.py
Scripting/pdf/: pdf.py
UnitTesting/: main.py  random_guess.py  random_unittest.py  test.py
WebDevelopment/: Web.py  web.ipynb
WebScraping/: webScraping.py  webScraping_exercise.py  ztmWebScraping.py
debugger/: Cheat_sheet.md  excercise1.py  excercise2.py  excercise3.py  excercise4.py  excercise5.py
(+7 files in other folders)
