[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argostranslate>=1.10.0",
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pip>=25.3",
    "pypdf>=6.4.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
